--- a/XinZhiHua/Web.config
+++ b/XinZhiHua/Web.config
@@ -16,6 +16,7 @@
     <add key="webpages:Enabled" value="false"/>
     <add key="ClientValidationEnabled" value="true"/>
     <add key="UnobtrusiveJavaScriptEnabled" value="true"/>
+    <add key="navigation_bar" value="index_首页,introduction_公司简介,statement_公司宗旨,honor_公司荣誉,new_新闻动态,product_产品中心,show_产品展示,contact_联系我们"/>
   </appSettings>
   <!--
     有关 web.config 更改的说明，请参见 http://go.microsoft.com/fwlink/?LinkId=235367。
