--- a/XinZhiHua/XinZhiHua.csproj
+++ b/XinZhiHua/XinZhiHua.csproj
@@ -140,7 +140,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="App_Data\db.db" />
-    <Content Include="Content\Css\manager-index.css" />
+    <Content Include="Content\Css\manager-common.css" />
     <Content Include="Content\Css\manager-logon.css" />
     <Content Include="Content\Lib\bootstrap-3.3.0-dist\css\bootstrap-theme.css" />
     <Content Include="Content\Lib\bootstrap-3.3.0-dist\css\bootstrap-theme.min.css" />
@@ -190,6 +190,14 @@
     <Content Include="Content\Lib\bootstrap-3.3.0-dist\fonts\glyphicons-halflings-regular.ttf" />
     <Content Include="Content\Lib\bootstrap-3.3.0-dist\fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Views\Manager\LogOn.cshtml" />
+    <Content Include="Views\Shared\_Manager_Layout.cshtml" />
+    <Content Include="Views\Manager\Introduction.cshtml" />
+    <Content Include="Views\Manager\Statement.cshtml" />
+    <Content Include="Views\Manager\Honor.cshtml" />
+    <Content Include="Views\Manager\New.cshtml" />
+    <Content Include="Views\Manager\Product.cshtml" />
+    <Content Include="Views\Manager\Show.cshtml" />
+    <Content Include="Views\Manager\Contact.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
