--- a/XinZhiHua/XinZhiHua.csproj
+++ b/XinZhiHua/XinZhiHua.csproj
@@ -87,6 +87,10 @@
       <Private>True</Private>
     </Reference>
     <Reference Include="Microsoft.CSharp" />
+    <Reference Include="Newtonsoft.Json, Version=9.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.9.0.1\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="System.Data.SQLite, Version=1.0.104.0, Culture=neutral, PublicKeyToken=db937bc2d44ff139, processorArchitecture=MSIL">
       <HintPath>..\packages\System.Data.SQLite.Core.1.0.104.0\lib\net451\System.Data.SQLite.dll</HintPath>
@@ -142,6 +146,7 @@
     <Content Include="App_Data\db.db" />
     <Content Include="Content\Css\manager-common.css" />
     <Content Include="Content\Css\manager-logon.css" />
+    <Content Include="Content\Js\manager-index.js" />
     <Content Include="Content\Lib\bootstrap-3.3.0-dist\css\bootstrap-theme.css" />
     <Content Include="Content\Lib\bootstrap-3.3.0-dist\css\bootstrap-theme.min.css" />
     <Content Include="Content\Lib\bootstrap-3.3.0-dist\css\bootstrap.css" />
@@ -151,6 +156,9 @@
     <Content Include="Content\Lib\bootstrap-3.3.0-dist\js\bootstrap.min.js" />
     <Content Include="Content\Lib\bootstrap-3.3.0-dist\js\npm.js" />
     <Content Include="Content\Lib\jquery-3.1.1.js" />
+    <Content Include="Content\Lib\webuploader-0.1.5\Uploader.swf" />
+    <Content Include="Content\Lib\webuploader-0.1.5\webuploader.css" />
+    <Content Include="Content\Lib\webuploader-0.1.5\webuploader.js" />
     <Content Include="Global.asax" />
     <Content Include="Web.config" />
   </ItemGroup>
@@ -158,7 +166,9 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="BLL\BaseService.cs" />
     <Compile Include="BLL\IBaseService.cs" />
+    <Compile Include="BLL\InterfaceService\ISettingService.cs" />
     <Compile Include="BLL\InterfaceService\IManagerService.cs" />
+    <Compile Include="BLL\Service\SettingService.cs" />
     <Compile Include="BLL\Service\ManagerService.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManagerController.cs" />
@@ -169,9 +179,8 @@
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Models\Setting.cs" />
     <Compile Include="Models\Manager.cs" />
-    <Compile Include="Models\Req\ModHomeUpload.cs" />
-    <Compile Include="Models\Req\ModLogOn.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
