--- a/XinZhiHua/packages.config
+++ b/XinZhiHua/packages.config
@@ -17,6 +17,7 @@
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.3" targetFramework="net452" />
   <package id="Microsoft.Net.Compilers" version="2.0.1" targetFramework="net452" developmentDependency="true" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net452" />
+  <package id="Newtonsoft.Json" version="9.0.1" targetFramework="net452" />
   <package id="System.Data.SQLite" version="1.0.104.0" targetFramework="net452" />
   <package id="System.Data.SQLite.Core" version="1.0.104.0" targetFramework="net452" />
   <package id="System.Data.SQLite.EF6" version="1.0.104.0" targetFramework="net452" />
