--- a/.gitignore
+++ b/.gitignore
@@ -3,4 +3,4 @@ XinZhiHua/App_Data/db.db
 XinZhiHua/bin
 XinZhiHua/obj
 XinZhiHua/XinZhiHua.csproj.user
-
+XinZhiHua/Content/Lib/ueditor1_4_3_3-utf8-net/net/upload/*
