--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ XinZhiHua/bin
 XinZhiHua/obj
 XinZhiHua/XinZhiHua.csproj.user
 XinZhiHua/Content/Lib/ueditor1_4_3_3-utf8-net/net/upload/*
+XinZhiHua/Content/Img/*
